--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "react-dom": "^16.8.1",
     "react-redux": "^5.1.1",
     "react-scripts": "2.1.5",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
+    "whatwg-fetch": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -17,7 +19,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "flow": "flow",
-    "pretty": "prettier --no-semi --single-quote --trailing-comma es5 --write \"src/**/*.js\""
+    "pretty": "prettier --no-semi --single-quote --trailing-comma es5 --write \"{src,server/src}/**/*.js\"",
+    "server": "node server/src"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -30,5 +33,6 @@
   ],
   "devDependencies": {
     "prettier": "1.16.4"
-  }
+  },
+  "proxy": "http://localhost:3001"
 }
